First LINQ file edited

--- a/LINQ/LINQ.csproj
+++ b/LINQ/LINQ.csproj
@@ -33,7 +33,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <StartupObject>LINQ.LINQQueryExpression</StartupObject>
+    <StartupObject>LINQ.LINQ</StartupObject>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -47,7 +47,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ContainsOperatorExample.cs" />
-    <Compile Include="LINQQueryExpression.cs" />
+    <Compile Include="LINQ.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
