Done till SingleOrDefault

--- a/LINQExtension/ExtensionMethod/ExtensionMethod/ExtensionMethod.csproj
+++ b/LINQExtension/ExtensionMethod/ExtensionMethod/ExtensionMethod.csproj
@@ -47,17 +47,30 @@
     <Compile Include="DataClass\EmployeeData.cs" />
     <Compile Include="DefinitionClass\Department.cs" />
     <Compile Include="DefinitionClass\Employee.cs" />
+    <Compile Include="ExtensionOperatorClasses\Aggregate.cs" />
     <Compile Include="ExtensionOperatorClasses\All.cs" />
     <Compile Include="ExtensionOperatorClasses\Any.cs" />
+    <Compile Include="ExtensionOperatorClasses\Average.cs" />
     <Compile Include="ExtensionOperatorClasses\Contains.cs" />
+    <Compile Include="ExtensionOperatorClasses\Count.cs" />
+    <Compile Include="ExtensionOperatorClasses\ElementAt.cs" />
+    <Compile Include="ExtensionOperatorClasses\ElementAtOrDefault.cs" />
+    <Compile Include="ExtensionOperatorClasses\First.cs" />
+    <Compile Include="ExtensionOperatorClasses\FirstOrDefault.cs" />
     <Compile Include="ExtensionOperatorClasses\GroupBy.cs" />
     <Compile Include="ExtensionOperatorClasses\GroupJoin.cs" />
     <Compile Include="ExtensionOperatorClasses\Join.cs" />
+    <Compile Include="ExtensionOperatorClasses\Last.cs" />
+    <Compile Include="ExtensionOperatorClasses\LastOrDefault.cs" />
+    <Compile Include="ExtensionOperatorClasses\Max.cs" />
     <Compile Include="ExtensionOperatorClasses\OfType.cs" />
     <Compile Include="ExtensionOperatorClasses\OrderBy.cs" />
     <Compile Include="ExtensionOperatorClasses\OrderByDesending.cs" />
     <Compile Include="ExtensionOperatorClasses\SelectMany.cs" />
     <Compile Include="ExtensionOperatorClasses\Select.cs" />
+    <Compile Include="ExtensionOperatorClasses\SingleOperator.cs" />
+    <Compile Include="ExtensionOperatorClasses\SingleOrDefault.cs" />
+    <Compile Include="ExtensionOperatorClasses\Sum.cs" />
     <Compile Include="ExtensionOperatorClasses\ThenBy.cs" />
     <Compile Include="ExtensionOperatorClasses\ThenByDescending.cs" />
     <Compile Include="ExtensionOperatorClasses\ToLookup.cs" />
